# articlehub

./: .gitignore  טיוטה לאפיון מערכת ראשוני.docx
reem-sentinel/: README.md
reem-sentinel/supabase/: combined_migration.sql  combined_migration_v2.sql  config.toml  seed.sql
reem-sentinel/supabase/functions/_shared/: analysis.ts  anthropic-client.ts  constants.ts  cors.ts  firecrawl.ts  generation-prompts.ts  html-brief.ts  keyword-match.ts  md5.ts  rss-parser.ts  supabase-client.ts  types.ts
reem-sentinel/supabase/functions/article-drill-down/: index.ts
reem-sentinel/supabase/functions/generate-content/: index.ts
reem-sentinel/supabase/functions/scan-orchestrator/: index.ts
reem-sentinel/supabase/functions/scan-process/: index.ts
reem-sentinel/supabase/functions/scan-scrape/: index.ts
reem-sentinel/supabase/functions/scan-trigger/: index.ts
reem-sentinel/supabase/functions/send-brief/: index.ts
reem-sentinel/supabase/migrations/: 001_create_extensions.sql  002_create_enums.sql  003_create_tables.sql  004_create_functions.sql  005_create_rls.sql  006_anon_read_policies.sql  007_enable_pg_cron_pg_net.sql
reem-sentinel/web/: package-lock.json  package.json
reem-sentinel/web/src/app/: globals.css  layout.tsx  page.tsx
reem-sentinel/web/src/components/: article-card.tsx  logo.tsx
reem-sentinel/web/src/lib/: fonts.ts  (+2 more)
reem-sentinel/worker/: .env.example  pyproject.toml
reem-sentinel/worker/src/: config.py  db.py  main.py
reem-sentinel/worker/src/services/: analysis.py  briefing.py  embeddings.py  generation.py  scan_orchestrator.py  scraping.py
(+23 files in other folders)
