[project]
name = "reem-sentinel-worker"
version = "0.1.0"
description = "Reem-AI Sentinel - Media monitoring and analysis worker service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "supabase>=2.9.0",
    "anthropic>=0.39.0",
    "feedparser>=6.0.0",
    "resend>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.scripts]
worker = "src.main:start"
